--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -221,6 +221,7 @@
 
 	<script>
 		var pageFlag = 0;
+		var idFlag = '';
 		var publisherId; //发布者id
 		var tempIndex; //节点对象id
 		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
@@ -675,7 +676,7 @@
 			InteractionList.push(praiseList);
 			InteractionList.push(commentList);
 			console.log('EncAddrList='+JSON.stringify(EncAddrList));
-			Data = [InfoList, ImageList, InteractionList,EncAddrList]
+			Data = [InfoList, ImageList, InteractionList,EncAddrList,'']
 			console.log('Data='+JSON.stringify(Data))
 			return Data;
 		}
