--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -1,4 +1,4 @@
-<!--求知回答详情-->
+<!--求知回答详情子页面-->
 <!doctype html>
 <html>
 
@@ -10,6 +10,7 @@
 		<link href="../../css/utils/preview.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<!--求知回答详情子页面-->
 		<link href="../../css/qiuzhi/qiuzhi-answerDetailSub.css" rel="stylesheet" />
 	</head>
 
@@ -44,6 +45,7 @@
 						<p id="support-answer" class="support-container display-inlineBlock mui-pull-right"><span id="answer-zan" class="mui-icon iconfont icon-support"></span> </p>
 					</div>
 				</div>
+				<!--评论数和排序选项-->
 				<div class="comments-info">
 					<p id="comments-no" class="comment-no mui-pull-left">你好</p>
 					<select id="order-selector" class="order-selector display-inlineBlock">
@@ -51,17 +53,23 @@
 						<option value="1">顺序排列</option>
 					</select>
 				</div>
+				<!--评论列表-->
 				<ul id="list-container" class="mui-table-view">
 				</ul>
 			</div>
 		</div>
+		<!--mui.js-->
 		<script src="../../js/mui.min.js"></script>
+		<!--公共方法js-->
 		<script src="../../js/utils/events.js"></script>
+		<!--预览js-->
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
+		<!--接口js-->
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicQiuzhiProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<!--求知回答详情js 本页js-->
 		<script src="../../js/qiuzhi/qiuzhi-answerDetailSub.js"></script>
 	</body>
 
