--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -18,26 +18,34 @@
 
 	<body>
 		<div id="content" class="mui-content">
+			<!--频道导航栏-->
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="slider_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted main-navigation">
 					<div id="subjects-container" class="mui-scroll">
 						<a class="mui-control-item" href="#defalut"></a>
 					</div>
 				</div>
+				<!--额外导航按钮-->
 				<div class="more-navigation">
 					<a class="iconfont icon-qita11">
 					</a>
 					<p>导航</p>
 				</div>
+				<!--配套设施-->
 				<div id="sliderGroup" class="mui-slider-group" style="height: 1px;">
 					<div id="defalut" class="mui-slider-item mui-control-content mui-active"></div>
 				</div>
 			</div>
 		</div>
+		
 		<script src="../../js/mui.min.js"></script>
+		<!--公共事件JS-->
 		<script src="../../js/utils/events.js"></script>
+		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
+		<!--qiuzhiJS-->
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
+		<!--本页js-->
 		<script src="../../js/qiuzhi/qiuzhi-home.js"></script>
 	</body>
 <!--
