--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -1,6 +1,6 @@
+<!--求知子页面-->
 <!doctype html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
@@ -13,41 +13,35 @@
 
 	<body>
 		<div class="mui-content">
+			<!--专家列表-->
 			<div class="experts-content">
 				<div class="experts-show">
 					<p class="export-show"><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>&nbsp;&nbsp;专家风采</p>
 				</div>
 				<div id="experts_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div id="experts_sc" class="mui-scroll">
-						<!--<a class="mui-control-item">
-							<img src="http://oigr7qsvz.bkt.clouddn.com/headimge1.png?1488254100675" />
-							<p class="mui-ellipsis" style="color:#323232;">一二三四</p>
-						</a>
-						<a class="mui-control-item">
-							<img src="http://oigr7qsvz.bkt.clouddn.com/headimge1.png?1488254100675" />
-							<p class="mui-ellipsis" style="color:#323232;">一二</p>
-						</a>
-						<a id="allExpert" class="mui-control-item">
-							<img src="../../image/qiuzhi/expert_more.png" />
-							<p>查看全部</p>
-						</a>-->
 					</div>
 				</div>
 			</div>
-			<!--<p><img id="img" border "0" src="http://qn-cspb.jiaobaowang.net/qiuzhi/Knowledge/14885338265901488533813957.jpg" style="clip:rect(10px 10px 20px 0px)"/></p>-->
-			<!--<div class="mui-table-view-divider"></div>-->
+			<!--问题列表-->
 			<div class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
 				</ul>
 			</div>
+			<!--发布问题按钮-->
 			<a id="submit-question" class="mui-icon iconfont icon-myQuestion"></a>
 		</div>
-
+		<!--mui.js-->
 		<script src="../../js/mui.min.js"></script>
+		<!--h5刷新-->
 		<script src="../../js/utils/h5fresh.js"></script>
+		<!--公共方法js-->
 		<script src="../../js/utils/events.js"></script>
+		<!--接口js-->
 		<script src="../../js/publicProtocol.js"></script>
+		<!--求知接口js-->
 		<script src="../../js/publicQiuzhiProtocol.js"></script>
+		<!--本页js-->
 		<script src="../../js/qiuzhi/qiuzhi-sub.js"></script>
 	</body>
 
