--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -226,6 +226,7 @@
 						askMan: personalUTID, //提问人
 						isAnonym: 0, //是否匿名
 						encAddr: TAs.encAddr,
+						thumbnail:TAs.encImg,
 						inviteExperts: boxesStr //邀请专家,例如[1,2,3]
 					};
 					// 等待的对话框
