--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -52,8 +52,9 @@
 				//修改密码
 				events.preload('../register/modify_password.html');
 				events.addTap('change-passwords', function() {
-						events.fireToPageNone('../register/modify_password.html', 'changePasswords');
-						plus.webview.getWebviewById('modify_password.html').show()
+//						events.fireToPageNone('../register/modify_password.html', 'changePasswords');
+//						plus.webview.getWebviewById('modify_password.html').show()
+						events.openNewWindowWithData('QRCode.html');
 					})
 					//退出
 				events.addTap('quit', function() {
