--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-newQ.html
@@ -346,7 +346,7 @@
 						li.innerHTML =
 							'<img class="mui-media-object mui-pull-left" style = "width:50px;height:43px;border-radius: 50%;" src="' + updateHeadImg(datasource[i].uimg, 2) + '">' +
 							'<div class="mui-media-body">' +
-							datasource[i].unick + '<font style="color:gray"> 回答数:<span style="color:red">' + datasource[i].AnswerNum + '</span>' +
+							events.shortForString(datasource[i].unick, 12) + '<font style="color:gray"> 回答数:<span style="color:red">' + datasource[i].AnswerNum + '</span>' +
 							'</font><p class="mui-ellipsis">' + datasource[i].UserNote + '</p></div>' +
 							'<div class="mui-checkbox" style="float:right;">' +
 							'<input class = "checkbox" value="' + datasource[i].TabId + '" type="checkbox" style="margin-top: -37px;">' +
