--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -98,6 +98,7 @@
 			//
 			////					});
 			//				});
+			CloudFileUtil.setDelPicListener();
 			events.addTap('take_camero', function() {
 				mui.toast('此功能暂未开放');
 				//					camera.getVideo(camera.getCamera(), function(path) {1
@@ -339,11 +340,11 @@
 		var imgs = [];
 
 		//删除图标的点击事件
-		mui('#pictures').on('tap', '.icon-guanbi', function() {
-			imgs.splice(imgs.indexOf(this.parentElement.img), 1);
-			//删除图片111
-			pictures.removeChild(this.parentElement);
-		})
+//		mui('#pictures').on('tap', '.icon-guanbi', function() {
+//			imgs.splice(imgs.indexOf(this.parentElement.img), 1);
+//			//删除图片111
+//			pictures.removeChild(this.parentElement);
+//		})
 		/**
 		 * 获取接口数据文件及缩略图
 		 * encType: '',//附件类型,1图片2音视频3仅文字
