--- a/JiaoBaoYun-hb/html/quan/zonep_sub.html
+++ b/JiaoBaoYun-hb/html/quan/zonep_sub.html
@@ -20,7 +20,7 @@
 		<script type="text/javascript" src="../../js/mui.lazyload.img.js"></script>
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
-				<script type="text/javascript" src="../../js/quan/dynamiclistitem.js"></script>
+		<script type="text/javascript" src="../../js/quan/dynamiclistitem.js"></script>
 
 		<style>
 			.mui-table-view-cell,
@@ -226,6 +226,7 @@
 		var tempIndex; //节点对象id
 		var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //用户id
 		var personalunick = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).unick; //用户昵称
+		var gid;
 		mui.init({
 			pullRefresh: {
 				container: '#pullrefresh',
@@ -246,8 +247,10 @@
 
 		//请求数据
 		function requestData(comData) {
+			//			getBottomList();
 			// 等待的对话框
 			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+
 			//28.（用户空间）获取用户针对某用户的空间列表
 			postDataPro_getUserSpacesByUserForPublisher(comData, wd, function(data) {
 				wd.close();
@@ -387,6 +390,8 @@
 
 		var id = 0; //cell的id
 		mui.plusReady(function() {
+			gid = plus.webview.currentWebview().data.data.classId
+			console.log(gid);
 			mui.previewImage();
 			initNativeObjects();
 			addReplyView();
@@ -566,10 +571,10 @@
 				tempIndex = this.id.replace('comment', '');
 				console.log('tempIndex====' + tempIndex)
 				addComment();
-//				var replyContainer = document.getElementById('footer');
-//				document.getElementById('footer').className = 'mui-bar-tab';
-//				replyContainer.style.display = 'block';
-//				showSoftInput('#msg-content');
+				//				var replyContainer = document.getElementById('footer');
+				//				document.getElementById('footer').className = 'mui-bar-tab';
+				//				replyContainer.style.display = 'block';
+				//				showSoftInput('#msg-content');
 				window.event.stopPropagation()
 
 			});
@@ -578,10 +583,10 @@
 				tempIndex = this.id.replace('bottomComment', '');
 				console.log('tap====' + tempIndex)
 				addComment();
-//				var replyContainer = document.getElementById('footer');
-//				document.getElementById('footer').className = 'mui-bar-tab';
-//				replyContainer.style.display = 'block';
-//				showSoftInput('#msg-content');
+				//				var replyContainer = document.getElementById('footer');
+				//				document.getElementById('footer').className = 'mui-bar-tab';
+				//				replyContainer.style.display = 'block';
+				//				showSoftInput('#msg-content');
 				window.event.stopPropagation()
 			});
 
@@ -591,22 +596,23 @@
 				tempIndex = this.id.replace('replyComment', '');
 				console.log('tempIndex====' + tempIndex)
 				addComment();
-//				var replyContainer = document.getElementById('footer');
-//				document.getElementById('footer').className = 'mui-bar-tab';
-//				replyContainer.style.display = 'block';
-//				showSoftInput('#msg-content');
+				//				var replyContainer = document.getElementById('footer');
+				//				document.getElementById('footer').className = 'mui-bar-tab';
+				//				replyContainer.style.display = 'block';
+				//				showSoftInput('#msg-content');
 				window.event.stopPropagation()
 
 			});
 
 		}
-			function addComment() {
-				events.openNewWindowWithData('../show/add-comment.html', {
-					tempIndex: tempIndex,
-					zonepArray: zonepArray
-				})
 
-			}
+		function addComment() {
+			events.openNewWindowWithData('../show/add-comment.html', {
+				tempIndex: tempIndex,
+				zonepArray: zonepArray
+			})
+
+		}
 		//加载数据
 		function addData(index) {
 			//[[InfoList],[ImageList],[InteractionList]]动态的信息
@@ -631,19 +637,19 @@
 			InfoList.push(time);
 			InfoList.push(contentText);
 			if(tempModel.EncImgAddr != '') {
-					var EncImgAddrs = tempModel.EncImgAddr.split('|');
-					var EncAddr = tempModel.EncAddr.split('|');
-					
-					//内容的图片
-					for(var i = 0; i < EncImgAddrs.length; i++) {
-						ImageList.push(EncImgAddrs[i])
-						EncAddrList.push(EncAddr[i]);
-					}
-				}
+				var EncImgAddrs = tempModel.EncImgAddr.split('|');
+				var EncAddr = tempModel.EncAddr.split('|');
 
-				//底部
-				//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
-				var introduce = '上传了' + ImageList.length + '张图片到相册《手机相册》';
+				//内容的图片
+				for(var i = 0; i < EncImgAddrs.length; i++) {
+					ImageList.push(EncImgAddrs[i])
+					EncAddrList.push(EncAddr[i]);
+				}
+			}
+
+			//底部
+			//[introduce，viewCount，[praiseList],[commentList]]信息说明，浏览次数，点赞列表数组，评论列表数组
+			var introduce = '上传了' + ImageList.length + '张图片到相册《手机相册》';
 			var viewCount = tempModel.ReadCnt;
 			var praiseList = [];
 			if(tempModel.LikeUsers.length != 0) {
@@ -675,9 +681,9 @@
 			InteractionList.push(viewCount);
 			InteractionList.push(praiseList);
 			InteractionList.push(commentList);
-			console.log('EncAddrList='+JSON.stringify(EncAddrList));
-			Data = [InfoList, ImageList, InteractionList,EncAddrList,'']
-			console.log('Data='+JSON.stringify(Data))
+			console.log('EncAddrList=' + JSON.stringify(EncAddrList));
+			Data = [InfoList, ImageList, InteractionList, EncAddrList, '']
+			console.log('Data=' + JSON.stringify(Data))
 			return Data;
 		}
 
@@ -850,7 +856,217 @@
 			}
 
 		}
+		// 通过群ID获取群的正常用户
+		function getBottomList() {
+			//需要参数
+			var comData = {
+				top: '-1', //选择条数
+				vvl: gid, //群ID，查询的值
+				vvl1: '-1', //群员类型，0家长,1管理员,2老师,3学生,-1取全部
 
+			};
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			// 通过群ID获取群的正常用户
+			postDataPro_PostGusers(comData, wd, function(data) {
+				wd.close();
+				console.log('通过群ID获取群的正常用户_PostGusers:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+					datasource = data.RspData;
+					//			群用户去重
+					var tempUtidArr = [];
+					var tempUserArr = [];
+					var groupUserList = datasource;
+
+					for(var i = 0; i < groupUserList.length; i++) {
+
+						if(groupUserList[i].mstype == 0) { //0家长,1管理员,2老师,3学生
+							groupUserList[i].mstypeName = '[家长]';
+						} else if(groupUserList[i].mstype == 1) {
+							groupUserList[i].mstypeName = '[管理员]';
+						} else if(groupUserList[i].mstype == 2) {
+							groupUserList[i].mstypeName = '[老师]';
+						} else {
+							groupUserList[i].mstypeName = '[学生]';
+						}
+
+						var Arrindex = tempUtidArr.indexOf(groupUserList[i].utid);
+						if(Arrindex > -1) {
+							tempUserArr[Arrindex].ugname = tempUserArr[Arrindex].ugname + groupUserList[i].mstypeName;
+						} else {
+							groupUserList[i].ugname = groupUserList[i].ugname + groupUserList[i].mstypeName;
+							tempUtidArr.push(groupUserList[i].utid);
+							tempUserArr.push(groupUserList[i]);
+
+						}
+					}
+					datasource = tempUserArr;
+					var userIds = [];
+					for(var i = 0; i < datasource.length; i++) {
+						//群用户id数组
+						tempModel = datasource[i];
+						//判断img是否为null，或者空
+						tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
+						userIds.push(tempModel.utid)
+						userIds.join(',');
+
+					}
+					userIds = arrayDupRemoval(userIds)
+					upString = arrayToStr(userIds)
+					getAllUserSpacesByUser(upString); //获取多用户空间列表
+
+				} else {
+					mui.toast(data.RspTxt);
+				}
+			});
+		}
+
+		function getAllUserSpacesByUser(ids) {
+			//74.(用户空间）获取多用户空间所有用户动态列表
+			//所需参数
+			var comData = {
+				userId: personalUTID, //用户ID,登录用户
+				publisherIds: ids, //发布者ID,例如[1,2,3]
+				pageIndex: 1, //当前页数
+				pageSize: 10 //每页记录数
+			};
+			// 等待的对话框
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			postDataPro_getAllUserSpacesByUser(comData, wd, function(data) {
+				wd.close();
+				console.log('获取所用空间列表_getAllUserSpacesByUser:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+					if(data.RspData.Data.length == 0) {
+						mui.toast('暂无动态')
+						return;
+					}
+					//								setUserSpaceReadByUser();
+					totalCnt = data.RspData.TotalCnt;
+					var tempRspData = data.RspData.Data;
+					//获取当前回调留言的个人信息，主要是头像、昵称
+					var tempArray = [];
+					//先遍历回调数组，获取
+					for(var item in tempRspData) {
+						//当前循环的model
+						var tempModel0 = tempRspData[item];
+						//将当前model中id塞到数组
+						tempArray.push(tempModel0.PublisherId);
+						//合并数组,点赞的人
+						tempArray = tempArray.concat(tempModel0.LikeUsers);
+						tempModel0.LikeUsers = arrayDupRemoval(tempModel0.LikeUsers);
+						//循环当前model中的回复数组
+						for(var item1 in tempModel0.Comments) {
+							//回复中的model
+							var tempModel1 = tempModel0.Comments[item1];
+							//将回复中的id塞到数组
+							tempArray.push(tempModel1.UserId);
+							tempArray.push(tempModel1.ReplyId);
+							//
+							for(var item2 in tempModel1.Replys) {
+								//回复中的model
+								var tempModel2 = tempModel1.Replys[item2];
+								//将回复中的id塞到数组
+								tempArray.push(tempModel2.UserId);
+								tempArray.push(tempModel2.ReplyId);
+							}
+						}
+					}
+					//给数组去重
+					tempArray = arrayDupRemoval(tempArray);
+					//发送获取用户资料申请
+					var tempData = {
+						vvl: tempArray.join(), //用户id，查询的值,p传个人ID,g传ID串
+						vtp: 'g' //查询类型,p(个人)g(id串)
+					}
+
+					//21.通过用户ID获取用户资料
+					postDataPro_PostUinf(tempData, wd, function(data1) {
+						wd.close();
+						console.log('获取个人资料success:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
+						if(data1.RspCode == 0) {
+							//循环当前的个人信息返回值数组
+							for(var i in data1.RspData) {
+								//当前model
+								var tempModel = data1.RspData[i];
+								//更新头像
+								tempModel.uimg = updateHeadImg(tempModel.uimg, 2);
+								//循环留言数组
+								for(var item in tempRspData) {
+									//当前循环的model
+									var tempModel0 = tempRspData[item];
+									//遍历点赞的人
+									for(var item2 in tempModel0.LikeUsers) {
+										//										console.log('item2;;;;;==' + tempModel.utid + ',' + tempModel0.LikeUsers[item2]);
+										if(tempModel.utid == tempModel0.LikeUsers[item2]) {
+											tempModel0.LikeUsers.splice(item2, 1, tempModel);
+										}
+									}
+									//对比id是否一致
+									if(tempModel0.PublisherId == tempModel.utid) {
+										//合并
+										tempModel0 = $.extend(tempModel0, tempModel);
+									}
+									//循环当前model中的回复数组
+									for(var item1 in tempModel0.Comments) {
+										//回复中的model
+										var tempModel1 = tempModel0.Comments[item1];
+										//对比id是否一致
+										if(tempModel.utid == tempModel1.UserId) {
+											//添加参数
+											tempModel1.UserIdName = tempModel.unick;
+										}
+										if(tempModel.utid == tempModel1.ReplyId) {
+											//添加参数
+											tempModel1.ReplyIdName = tempModel.unick;
+										}
+										//
+										for(var item2 in tempModel1.Replys) {
+											//回复中的model
+											var tempModel2 = tempModel1.Replys[item2];
+											//对比id是否一致
+											if(tempModel.utid == tempModel2.UserId) {
+												//添加参数
+												tempModel2.UserIdName = tempModel.unick;
+											}
+											if(tempModel.utid == tempModel2.ReplyId) {
+												//添加参数
+												tempModel2.ReplyIdName = tempModel.unick;
+											}
+										}
+									}
+								}
+							}
+						}
+						console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
+
+						var table = document.body.querySelector('.mui-table-view');
+						//判断是加载更多1，还是刷新2
+						if(flag == 1) {
+							var tempLength = zonepArray.length;
+							//合并数组
+							zonepArray = zonepArray.concat(tempRspData);
+							mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
+							for(var i = tempLength; i < zonepArray.length; i++) {
+								id = i;
+								var data = addData(i);
+								dynamiclistitem.addItem(table, data, id);
+							}
+						} else {
+							tempPage = 1;
+							zonepArray = tempRspData;
+							table.innerHTML = '';
+							for(var i = 0; i < zonepArray.length; i++) {
+								id = i;
+								var data = addData(i);
+								dynamiclistitem.addItem(table, data, id);
+							}
+						}
+					});
+				} else {
+					mui.toast(data.RspTxt);
+				}
+
+			})
+		}
 		//失去焦点事件
 		function inputOnblur(input) {
 			var inputComment = document.getElementById("msg-content");
