调整我的界面 合并 申请记录和新消息界面

--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -36,19 +36,19 @@
 							<img src="../../image/mine/data.png" class="mine-icon"></span> 人员资料
 						</a>
 					</li>
-
-					<li class="mui-table-view-cell" position='2'>
-						<a class="mui-navigate-right" open-type="common">
-							<img src='../../image/mine/apply-group.png' class="mine-icon"></img> 申请加入群
-						</a>
-					</li>
-					<li class="mui-table-view-divider"></li>
 					<li class="mui-table-view-cell" position='3'>
 						<a class="" open-type="common">
 							<img src="../../image/mine/new-message.png" class="mine-icon"></span> 新消息
 							<span id="news-amount" class="mui-badge mui-badge-red">0</span>
 						</a>
 					</li>
+					<!--<li class="mui-table-view-cell" position='2'>
+						<a class="mui-navigate-right" open-type="common">
+							<img src='../../image/mine/apply-group.png' class="mine-icon"></img> 申请加入群
+						</a>
+					</li>-->
+					<li class="mui-table-view-divider"></li>
+					
 
 					<li class="mui-table-view-cell" position='4'>
 						<a class="mui-navigate-right">
