--- a/JiaoBaoYun-hb/html/mine/approval-apply.html
+++ b/JiaoBaoYun-hb/html/mine/approval-apply.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/mine/apply.css" rel="stylesheet" />
 		<style>
 		
@@ -18,7 +19,8 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">审批入群</h1>
+		    <h1 class="mui-title">新消息</h1>
+		    <a id="btn-apply" class="mui-icon iconfont icon-jia mui-pull-right"></a>
 		</header>
 	
 		   <div class="mui-content mui-scroll-wrapper">
