--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -236,6 +236,7 @@
 					answerContent: answerContent, //回答内容,4000
 					encAddr: getTypeAddress(CloudFileUtil.files).encAddr, //附件地址,300,多个的情况例如：1.jpg|2.jpg
 					thumbnail:getTypeAddress(CloudFileUtil.files).encImg,
+					cutImg:getTypeAddress(CloudFileUtil.files).clipAddress,
 					answerMan: personalUTID, //回答人
 					isAnonym: isAnonymNo
 				};
