修改专家简介限制字数、专家界面导航图标删除

--- a/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
@@ -237,15 +237,11 @@
 						<div id="topList" class="mui-scroll">\
 						</div>\
 					</div>\
-					<div class="more-navigation">\
-						<a class="iconfont icon-qita11"></a>\
-						<p>导航</p>\
-					</div>\
 					<div id="sliderGroup" class="mui-slider-group">\
 					</div>\
 				</div>';
 
-			document.getElementById("sliderSegmentedControl").style.width = document.body.querySelector('.more-navigation').offsetLeft + 'px';
+//			document.getElementById("sliderSegmentedControl").style.width = document.body.querySelector('.more-navigation').offsetLeft + 'px';
 
 			//顶部增加话题和底部列表的框架
 			addChannels(mainData.channelInfo, mainData.allChannels, function() {
