--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi_home.html
@@ -26,11 +26,11 @@
 					</div>
 				</div>
 				<!--额外导航按钮-->
-				<div class="more-navigation">
+				<!--<div class="more-navigation">
 					<a class="iconfont icon-qita11">
 					</a>
 					<p>导航</p>
-				</div>
+				</div>-->
 				<!--配套设施-->
 				<div id="sliderGroup" class="mui-slider-group" style="height: 1px;">
 					<div id="defalut" class="mui-slider-item mui-control-content mui-active"></div>
